// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.edpaggregator;

option java_package = "org.wfanet.measurement.config.edpaggregator";
option java_multiple_files = true;
option java_outer_classname = "TransportLayerSecurityParamsProto";

// TLS parameters for cloud function connections using filesystem cert paths.
//
// Deprecated: Use wfa.measurement.edpaggregator.v1alpha.TransportLayerSecurityParams instead.
message TransportLayerSecurityParams {
  option deprecated = true;
  // Path to the PEM-encoded client certificate file.
  string cert_file_path = 1;

  // Path to the PEM-encoded client private key file.
  string private_key_file_path = 2;

  // Path to the PEM-encoded trusted certificate collection file.
  string cert_collection_file_path = 3;
}
